[project]
name = "ty-agent"
version = "0.1.0"
description = "A lightweight, extensible agent framework. Prioritizes Feishu support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "lark-oapi>=1.5.5",
    "pyyaml>=6.0",
    "qrcode>=8.2",
]

[project.optional-dependencies]
feishu = [
    "lark-oapi>=1.5",
    "qrcode>=7.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
ty-agent = "ty_agent_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
